# sling-python

./: .gitignore  LICENSE  README.md  server.json  setup.py
.github/workflows/: publish-mcp.yml  release.yml
scripts/: validate-mcp.sh
sling/: __init__.py  pyproject.toml  setup.py
sling/sling/: __init__.py  api_spec.py  arrow.py  bin.py  connection.py  enum.py  hooks.py  options.py
sling/tests/: README.md  sample_api_spec.yaml  test_api_spec.py  test_columns_type_casting.py  test_connection.py  test_sling_class.py  tests.py
sling_base/sling-linux-amd64/: MANIFEST.in  setup.py
sling_base/sling-linux-arm64/: MANIFEST.in  setup.py
sling_base/sling-linux-arm64/sling_linux_arm64/: __init__.py
sling_base/sling-mac-amd64/: MANIFEST.in  setup.py
sling_base/sling-mac-arm64/: MANIFEST.in  setup.py
sling_base/sling-mac-arm64/sling_mac_arm64/: __init__.py
sling_base/sling-mac-universal/: MANIFEST.in  setup.py
sling_base/sling-mac-universal/sling_mac_universal/: __init__.py
sling_base/sling-windows-amd64/: MANIFEST.in  setup.py
sling_base/sling-windows-amd64/sling_windows_amd64/: __init__.py
